--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -131,7 +131,7 @@
       font-size: 1.5rem;
       font-weight: 700;
       color: #00aaff;
-      letter-spacing: 2px;">BLUE LOCK</div>
+      letter-spacing: 2px;"><a href="homepage">BLUE LOCK</a></div>
     <div>
       <a href="uhh">Teams </a>⚽︎
       <a href="uhh">Positions </a>⚽︎
