--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -134,7 +134,7 @@
       letter-spacing: 2px;"><a href="homepage">BLUE LOCK</a></div>
     <div>
       <a href="uhh">Teams </a>⚽︎
-      <a href="uhh">Positions </a>⚽︎
+      <a href="uhh">Home </a>⚽︎
       <a href="uhh">Aces </a>
     </div>
   </nav>
