--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -94,11 +94,6 @@
         gap: 0.5rem;
       }
 
-  .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-    }
     .card {
       background: #11121a;
       border: 2px solid #00ccff;
@@ -135,6 +130,7 @@
     <div>
       <a href="uhh">Teams </a>⚽︎
       <a href="uhh">Home </a>⚽︎
+      <a href="uhh">Index </a>⚽︎
       <a href="uhh">Aces </a>
     </div>
   </nav>
@@ -169,18 +165,23 @@
   </tr>
 </table>
 
-<section id="characters">
-    <h2>idfk</h2>
-    <div class="character-grid">
-    <div class="card">
-        <img src="https://i.pinimg.com/736x/85/63/29/856329d5926bccb2088a3d145cddd9bb.jpg" alt="ewew">
-        <h3>yada</h3>
-      </div>
-      <div class="card">
-        <img src="https://i.pinimg.com/736x/85/63/29/856329d5926bccb2088a3d145cddd9bb.jpg" alt="ewew">
-        <h3>yede</h3>
-      </div>
-    </div>
+  <section>
+    <h2></h2>
+    <table>
+      <tr>
+        <td><div class="card">
+          <img src="https://i.pinimg.com/736x/85/63/29/856329d5926bccb2088a3d145cddd9bb.jpg" alt="ewew">
+          <h3>yada</h3>
+        </div></td>
+        <td><div class="card">
+          <img src="https://i.pinimg.com/736x/85/63/29/856329d5926bccb2088a3d145cddd9bb.jpg" alt="ewew">
+          <h3>yede</h3>
+        </div></td>
+      </tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+    </table>
   </section>
 
   <script>
