--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -128,10 +128,10 @@
       color: #00aaff;
       letter-spacing: 2px;"><a href="homepage">BLUE LOCK</a></div>
     <div>
-      <a href="uhh">Teams </a>⚽︎
+      <a href="https://liuz0429.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1GBerylliumCabrera.html">Teams </a>⚽︎
       <a href="uhh">Home </a>⚽︎
       <a href="uhh">Index </a>⚽︎
-      <a href="uhh">Aces </a>
+      <a href="https://liam25465.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1BerylliumSarmiento.html">Aces </a>
     </div>
   </nav>
 
