--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -145,9 +145,25 @@
 
   <section>
     <h2 class="subheader">Info</h2>
-    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;"> "Put your all on the line. Let's go, you diamonds in the rough!</p>
+	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">We are BLUE LOCK, and we will change the times."</p>
+
+	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">In order to develop the world's best striker to lead Japan to the World Cup championship, the Japan Football Union has launched the "BLUE LOCK" project.</p>
+
+	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">Three hundred high school students were invited to participate in the project.</p>
+	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">They were all forwards.</p>
+
+	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">Under the extreme condition that if they are eliminated from the team, they will lose their qualification to ever play for the Japanese national soccer team, the selected talents awaken their egos as strikers one after another.</p>
+
+	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">Thirty-five egoists survived the grueling selection process. Some by kicking others down, and some by evolving as players.</p>
+
+	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">Having survived the frenzy and now filled with ego, they will fight for BLUE LOCK's survival, participating in their biggest match to date, a historic battle against the U-20 Japan national team</p>
+
+	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">The chance to change destiny and imprint their ego upon the world is at hand as the hottest match in history begins!</p>
   </section>
+
+
+<section><h2 class="subheader">Info</h2>
 
 <table style="margin-left: auto;
         margin-right: auto;">
@@ -162,8 +178,52 @@
     <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
     </td>
+	<td>
+      <h2 class="subheader">Info</h2>
+    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+    </td>
+  </tr>
+
+
+  <tr>
+    <td>
+      <h2 class="subheader">Info</h2>
+        <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+    </td>
+    <td>
+      <h2 class="subheader">Info</h2>
+    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+    </td>
+	<td>
+      <h2 class="subheader">Info</h2>
+    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+    </td>
+  </tr>
+
+
+  <tr>
+    <td>
+      <h2 class="subheader">Info</h2>
+        <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+    </td>
+    <td>
+      <h2 class="subheader">Info</h2>
+    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+    </td>
+	<td>
+      <h2 class="subheader">Info</h2>
+    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
+     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+    </td>
   </tr>
 </table>
+</section>
 
   <section>
     <h2></h2>
