--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -5,7 +5,6 @@
 	<title>Blue Lock</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="https://cdn.imgchest.com/files/e76eace881c8.png" type="image/ico" sizes="16x16" /
-  <title>Blue Lock Fan Site</title>
   <style>
    
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
@@ -163,63 +162,55 @@
   </section>
 
 
-<section><h2 class="subheader">Info</h2>
+<section><h2 class="subheader">Popular Characters</h2>
 
 <table style="margin-left: auto;
         margin-right: auto;">
   <tr>
     <td>
-      <h2 class="subheader">Info</h2>
-        <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+      <h2 class="subheader">Name/h2>
     </td>
     <td>
-      <h2 class="subheader">Info</h2>
-    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+      <h2 class="subheader">Voice Actor	</h2>
     </td>
 	<td>
-      <h2 class="subheader">Info</h2>
-    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+      <h2 class="subheader">Rank</h2>
+		 <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">according to https://bluelock-anime-en.com/ </p>
     </td>
   </tr>
 
 
   <tr>
     <td>
-      <h2 class="subheader">Info</h2>
-        <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+      <h2 class="subheader">Yoichi Isagi</h2>
     </td>
     <td>
-      <h2 class="subheader">Info</h2>
-    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+      <h2 class="subheader">Kazuki Ura</h2>
     </td>
 	<td>
-      <h2 class="subheader">Info</h2>
-    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+      <h2 class="subheader">15</h2>
     </td>
   </tr>
-
-
   <tr>
     <td>
-      <h2 class="subheader">Info</h2>
-        <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+      <h2 class="subheader">Rin Itoshi</h2>
     </td>
     <td>
-      <h2 class="subheader">Info</h2>
-    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+      <h2 class="subheader">Koki Uchiyama</h2>
     </td>
 	<td>
-      <h2 class="subheader">Info</h2>
-    <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">
-     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi aliquet ante nec fringilla rutrum. Nam nec urna vel nunc posuere pulvinar nec eget nisl. Nulla diam neque, venenatis in nisi ut, hendrerit mattis mauris. Aliquam elementum quam orci, at lacinia lorem dictum eu. Vivamus enim sapien, commodo et justo eu, porttitor scelerisque ipsum. Aliquam nisl erat, vulputate vitae velit id, porta interdum dolor. Fusce a bibendum quam. Suspendisse varius ultricies dignissim.</p>
+      <h2 class="subheader">1</h2>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <h2 class="subheader">Meguru Bachira</h2>
+    </td>
+    <td>
+      <h2 class="subheader">Tasuku Kaito</h2>
+    </td>
+	<td>
+      <h2 class="subheader">16</h2>
     </td>
   </tr>
 </table>
