--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <h1>Index WWEEEEE</h1>
 <h4>First Graded Assesment</h4>
 <ul>
-    <li><a href="">My Website</a></li>
-    <li><a href="">Groupmate 1's Website</a></li>
-    <li><a href="">Groupmate 2's Website</a></li>
+    <li><a href="https://aravilalado.github.io/CS3_2ndQTRPortfolio/public/2Q1GBerylliumVillados.html">My Website</a></li>
+    <li><a href="https://liuz0429.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1GBerylliumCabrera.html">Groupmate 1's Website</a></li>
+    <li><a href="https://liam25465.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1BerylliumSarmiento.html">Groupmate 2's Website</a></li>
 </ul>
 
 </body>
