--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 	<title>Blue Lock</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="https://cdn.imgchest.com/files/e76eace881c8.png" type="image/ico" sizes="16x16" /
+  <link rel="icon" href="https://cdn.imgchest.com/files/e76eace881c8.png" type="image/ico" sizes="16x16" />
   <style>
    
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
@@ -35,6 +35,8 @@
       background: rgba(0, 0, 0, 0.6);
       backdrop-filter: blur(10px);
       z-index: 100;
+	flex-direction: column;
+        gap: 0.5rem;
     }
     .logo {
       font-size: 1.5rem;
@@ -86,12 +88,6 @@
       color: #00ccff;
     }
 
-
-    /* basta for ano uhh javascript */
-      nav {
-        flex-direction: column;
-        gap: 0.5rem;
-      }
 
     .card {
       background: #11121a;
@@ -168,7 +164,7 @@
         margin-right: auto;">
   <tr>
     <td>
-      <h2 class="subheader">Name/h2>
+      <h2 class="subheader">Name</h2>
     </td>
     <td>
       <h2 class="subheader">Voice Actor	</h2>
@@ -229,10 +225,6 @@
           <h3>yede</h3>
         </div></td>
       </tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
     </table>
   </section>
 
