--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 	<title>Blue Lock</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="https://cdn.imgchest.com/files/e76eace881c8.png" type="image/ico" sizes="16x16" />
+  <link rel="icon" href="https://cdn.imgchest.com/files/e76eace881c8.png" type="image/ico" sizes="16x16">
   <style>
    
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
