--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -178,55 +178,39 @@
 
   <tr>
     <td>
-      <h2 class="subheader">Yoichi Isagi</h2>
+      <strong>Yoichi Isagi</strong>
     </td>
     <td>
-      <h2 class="subheader">Kazuki Ura</h2>
+      <strong>Kazuki Ura</strong>
     </td>
 	<td>
-      <h2 class="subheader">15</h2>
+      <strong>15</strong>
     </td>
   </tr>
   <tr>
     <td>
-      <h2 class="subheader">Rin Itoshi</h2>
+      <strong>Rin Itoshi</strong>
     </td>
     <td>
-      <h2 class="subheader">Koki Uchiyama</h2>
+      <strong>Koki Uchiyama</strong>
     </td>
 	<td>
-      <h2 class="subheader">1</h2>
+      <strong>1</strong>
     </td>
   </tr>
   <tr>
     <td>
-      <h2 class="subheader">Meguru Bachira</h2>
+      <strong>Meguru Bachira</strong>
     </td>
     <td>
-      <h2 class="subheader">Tasuku Kaito</h2>
+      <strong>Tasuku Kaito</strong>
     </td>
 	<td>
-      <h2 class="subheader">16</h2>
+      <strong>16</strong>
     </td>
   </tr>
 </table>
 </section>
-
-  <section>
-    <h2></h2>
-    <table>
-      <tr>
-        <td><div class="card">
-          <img src="https://i.pinimg.com/736x/85/63/29/856329d5926bccb2088a3d145cddd9bb.jpg" alt="ewew">
-          <h3>yada</h3>
-        </div></td>
-        <td><div class="card">
-          <img src="https://i.pinimg.com/736x/85/63/29/856329d5926bccb2088a3d145cddd9bb.jpg" alt="ewew">
-          <h3>yede</h3>
-        </div></td>
-      </tr>
-    </table>
-  </section>
 
   <script>
     //so that nav with still be in the same position when scrolling
@@ -239,16 +223,6 @@
       });
     });
     
-  const cards = document.querySelectorAll('.card');
-    window.addEventListener('scroll', () => {
-      cards.forEach(card => {
-        const rect = card.getBoundingClientRect();
-        if (rect.top < window.innerHeight - 100) {
-          card.style.opacity = '1';
-          card.style.transform = 'translateY(0)';
-        }
-      });
-    });
   </script>
 
 </body>
