--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -178,35 +178,35 @@
 
   <tr>
     <td>
-      <strong>Yoichi Isagi</strong>
+      <p>Yoichi Isagi</p>
     </td>
     <td>
-      <strong>Kazuki Ura</strong>
+      <p>Kazuki Ura</p>
     </td>
 	<td>
-      <strong>15</strong>
+      <p>15</p>
     </td>
   </tr>
   <tr>
     <td>
-      <strong>Rin Itoshi</strong>
+      <p>Rin Itoshi</p>
     </td>
     <td>
-      <strong>Koki Uchiyama</strong>
+      <p>Koki Uchiyama</p>
     </td>
 	<td>
-      <strong>1</strong>
+      <p>1</p>
     </td>
   </tr>
   <tr>
     <td>
-      <strong>Meguru Bachira</strong>
+      <p>Meguru Bachira</p>
     </td>
     <td>
-      <strong>Tasuku Kaito</strong>
+      <p>Tasuku Kaito</p>
     </td>
 	<td>
-      <strong>16</strong>
+      <p>16</p>
     </td>
   </tr>
 </table>
