--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -171,7 +171,6 @@
     </td>
 	<td>
       <h2 class="subheader">Rank</h2>
-		 <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">according to https://bluelock-anime-en.com/ </p>
     </td>
   </tr>
 
@@ -210,6 +209,13 @@
     </td>
   </tr>
 </table>
+
+<footer>
+<p>Sources:</p>
+<p>BLUE LOCK, Anime Official Website. (2024, November 2). <i>BLUE LOCK | Anime Official Website.</i>  <br />
+	https://bluelock-anime-en.com/</p>
+	
+</footer>
 </section>
 
   <script>
