--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -88,28 +88,6 @@
       color: #00ccff;
     }
 
-
-    .card {
-      background: #11121a;
-      border: 2px solid #00ccff;
-      border-radius: 10px;
-      overflow: hidden;
-      transition: transform 0.3s, box-shadow 0.3s;
-      cursor: pointer;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 20px #00ccff;
-    }
-    .card img {
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-    }
-    .card h3 {
-      padding: 1rem;
-      text-align: center;
-    }
   </style>
 </head>
 <body>
@@ -206,6 +184,17 @@
     </td>
 	<td>
       <p>16</p>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <p>Ryusei Shindou</p>
+    </td>
+    <td>
+      <p>Yuichi Nakamura</p>
+    </td>
+	<td>
+      <p>111</p>
     </td>
   </tr>
 </table>
