--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -23,8 +23,11 @@
     img { max-width: 100%; display: block; }
 
 
-    /* for the nav bar ontop */
-    nav {
+footer {
+	background-color: #080a12;
+}   
+	  
+	nav {
       position: fixed;
       top: 0; left: 0;
       width: 100%;
