--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -145,13 +145,13 @@ footer {
         margin-right: auto;">
   <tr>
     <td>
-      <h2 class="subheader">Name</h2>
+      <h2 class="subheader">Name  | </h2>
     </td>
     <td>
-      <h2 class="subheader">Voice Actor	</h2>
+      <h2 class="subheader">Voice Actor	  | </h2>
     </td>
 	<td>
-      <h2 class="subheader">Rank</h2>
+      <h2 class="subheader">Rank  | </h2>
     </td>
   </tr>
 
