--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+	<meta charset="UTF-8">
 	<title>Blue Lock</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="https://cdn.imgchest.com/files/e76eace881c8.png" type="image/ico" sizes="16x16">
-  <style>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="https://cdn.imgchest.com/files/e76eace881c8.png" type="image/ico" sizes="16x16">
+	<style>
    
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
     * {
@@ -23,9 +23,9 @@
     img { max-width: 100%; display: block; }
 
 
-footer {
+	footer {
 	background-color: #080a12;
-}   
+	}   
 	  
 	nav {
       position: fixed;
@@ -94,9 +94,6 @@ footer {
   </style>
 </head>
 <body>
-
-
-  <!-- navigation bar -->
   <nav>
     <div style="
       font-size: 1.5rem;
@@ -111,104 +108,91 @@ footer {
     </div>
   </nav>
 
-
   <header>
     <h1>“Only the True Egoist Can Be the Best Striker.”</h1>
   </header>
-
-
-
-
   <section>
     <h2 class="subheader">Info</h2>
     <p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;"> "Put your all on the line. Let's go, you diamonds in the rough!</p>
 	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">We are BLUE LOCK, and we will change the times."</p>
-
 	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">In order to develop the world's best striker to lead Japan to the World Cup championship, the Japan Football Union has launched the "BLUE LOCK" project.</p>
-
 	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">Three hundred high school students were invited to participate in the project.</p>
 	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">They were all forwards.</p>
-
 	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">Under the extreme condition that if they are eliminated from the team, they will lose their qualification to ever play for the Japanese national soccer team, the selected talents awaken their egos as strikers one after another.</p>
-
 	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">Thirty-five egoists survived the grueling selection process. Some by kicking others down, and some by evolving as players.</p>
-
 	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">Having survived the frenzy and now filled with ego, they will fight for BLUE LOCK's survival, participating in their biggest match to date, a historic battle against the U-20 Japan national team</p>
-
 	<p style="text-align:center; max-width:700px; margin:0 auto; line-height:1.8;">The chance to change destiny and imprint their ego upon the world is at hand as the hottest match in history begins!</p>
   </section>
 
 
-<section><h2 class="subheader">Popular Characters</h2>
-
-<table style="margin-left: auto;
+<section>
+	<h2 class="subheader">Popular Characters</h2>
+	<table style="margin-left: auto;
         margin-right: auto;">
-  <tr>
-    <td>
-      <h2 class="subheader">Name  | </h2>
-    </td>
-    <td>
-      <h2 class="subheader">Voice Actor	  | </h2>
-    </td>
-	<td>
-      <h2 class="subheader">Rank  | </h2>
-    </td>
-  </tr>
-
-
-  <tr>
-    <td>
-      <p>Yoichi Isagi</p>
-    </td>
-    <td>
-      <p>Kazuki Ura</p>
-    </td>
-	<td>
-      <p>15</p>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <p>Rin Itoshi</p>
-    </td>
-    <td>
-      <p>Koki Uchiyama</p>
-    </td>
-	<td>
-      <p>1</p>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <p>Meguru Bachira</p>
-    </td>
-    <td>
-      <p>Tasuku Kaito</p>
-    </td>
-	<td>
-      <p>16</p>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <p>Ryusei Shindou</p>
-    </td>
-    <td>
-      <p>Yuichi Nakamura</p>
-    </td>
-	<td>
-      <p>111</p>
-    </td>
-  </tr>
-</table>
-
-<footer>
-<p>Sources:</p>
-<p>BLUE LOCK, Anime Official Website. (2024, November 2). <i>BLUE LOCK | Anime Official Website.</i>  <br />
-	https://bluelock-anime-en.com/</p>
-	
-</footer>
+ 		 <tr>
+  			<td>
+    		  	<h2 class="subheader">Name  | </h2>
+  			</td>
+    		<td>
+     		 	<h2 class="subheader">Voice Actor	  | </h2>
+   			</td>
+			<td>
+      			<h2 class="subheader">Rank  | </h2>
+   			</td>
+		</tr>
+		<tr>
+   		 	<td>
+      			<p>Yoichi Isagi</p>
+   			</td>
+    		<td>
+      			<p>Kazuki Ura</p>
+   			</td>
+			<td>
+     			<p>15</p>
+   			</td>
+  		</tr>
+  		<tr>
+    		<td>
+      			<p>Rin Itoshi</p>
+    		</td>
+    		<td>
+      			<p>Koki Uchiyama</p>
+    		</td>
+			<td>
+      			<p>1</p>
+    		</td>
+  		</tr>
+  		<tr>
+    		<td>
+      			<p>Meguru Bachira</p>
+    		</td>
+    		<td>
+      			<p>Tasuku Kaito</p>
+    		</td>
+			<td>
+      			<p>16</p>
+    		</td>
+		</tr>
+  		<tr>
+    		<td>
+      			<p>Ryusei Shindou</p>
+    		</td>
+    		<td>
+      			<p>Yuichi Nakamura</p>
+    		</td>
+			<td>
+      			<p>111</p>
+    		</td>
+  		</tr>
+	</table>
 </section>
+	
+<footer>
+	<p>Sources:</p>
+	<p>BLUE LOCK, Anime Official Website. (2024, November 2). <i>BLUE LOCK | Anime Official Website.</i>  <br />
+	https://bluelock-anime-en.com/</p>	
+</footer>
+
 
   <script>
     //so that nav with still be in the same position when scrolling
