--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -186,7 +186,24 @@
   		</tr>
 	</table>
 </section>
-	
+
+
+<section>
+	<h2 class="subheader">Previews</h2>
+	<table>
+		<tr>
+			<td>
+				<img src="../assets/one.jpg" alt="one">
+			</td>
+			<td>
+				<img src="../assets/two.png" alt="two">
+			</td>
+			<td>
+				<img src="../assets/three.jpg" alt="three">
+			</td>
+		</tr>
+	</table>
+</section>
 <footer>
 	<p>Sources:</p>
 	<p>BLUE LOCK, Anime Official Website. (2024, November 2). <i>BLUE LOCK | Anime Official Website.</i>  <br />
