--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -193,13 +193,13 @@
 	<table>
 		<tr>
 			<td>
-				<img src="../assets/one.jpg" alt="one">
+				<img src="../public/assets/one.jpg" alt="one">
 			</td>
 			<td>
-				<img src="../assets/two.png" alt="two">
+				<img src="../public/assets/two.png" alt="two">
 			</td>
 			<td>
-				<img src="../assets/three.jpg" alt="three">
+				<img src="../public/assets/three.jpg" alt="three">
 			</td>
 		</tr>
 	</table>
