updates liam's link

--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -101,10 +101,10 @@
       color: #00aaff;
       letter-spacing: 2px;"><a href="homepage">BLUE LOCK</a></div>
     <div>
-      <a href="https://liuz0429.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1GBerylliumCabrera.html">Teams </a>⚽︎
-      <a href="uhh">Home </a>⚽︎
-      <a href="uhh">Index </a>⚽︎
-      <a href="https://liam25465.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1BerylliumSarmiento.html">Aces </a>
+      <a href="https://liuz0429.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1GBerylliumCabrera.html" target="_blank">Teams </a>⚽︎
+      <a href="https://aravilalado.github.io/CS3_2ndQTRPortfolio/public/2Q1GBerylliumVillados.html" target="_blank">Home </a>⚽︎
+      <a href="https://aravilalado.github.io/CS3_2ndQTRPortfolio/index.html" target="_blank">Index </a>⚽︎
+      <a href="https://liam25465.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1GBerylliumSarmiento.html" target="_blank">Aces </a>
     </div>
   </nav>
 
