--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -5,59 +5,9 @@
 	<title>Blue Lock</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="https://cdn.imgchest.com/files/e76eace881c8.png" type="image/ico" sizes="16x16">
+	<link rel="stylesheet" href="2ndgraded.css">
 	<style>
-   
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap');
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;/* special font lol */
-    }
-    body {
-      font-family: 'Orbitron', sans-serif;
-      background-color: #0a0a0f;
-      color: #fff;
-      overflow-x: hidden;
-    }
-    a { text-decoration: none; color: inherit; }
-    img { max-width: 100%; display: block; }
-
-
-	footer {
-	background-color: #15192b;
-	}   
-	  
-	nav {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      background: rgba(0, 0, 0, 0.6);
-      backdrop-filter: blur(10px);
-      z-index: 100;
-	  flex-direction: column;
-      gap: 0.5rem;
-    }
-    .logo {
-      font-size: 1.5rem;
-      font-weight: 700;
-      color: #00aaff;
-      letter-spacing: 2px;
-    }
-    .nav-links {
-      display: flex;
-      gap: 1.5rem;
-    }
-    .nav-links a:hover {
-      color: #00ccff;
-      text-shadow: 0 0 10px #00ccff;
-    }
-
-
-    header {
+		header {
       height: 100vh;
       background: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.9)),
                   url('https://m.media-amazon.com/images/S/pv-target-images/cd6204c81c4547dec4904bc2575d3cdd77abaa462857336faf44abc5eba89ef5.png') center/cover no-repeat;
@@ -90,8 +40,7 @@
       margin-bottom: 2rem;
       color: #00ccff;
     }
-
-  </style>
+	</style>
 </head>
 <body>
   <nav>
@@ -193,13 +142,13 @@
 	<table>
 		<tr>
 			<td>
-				<img src="../public/assets/one.jpg" alt="one">
+				<img src="../public/assets/one.jpg" alt="one" style="float: left;">
 			</td>
 			<td>
-				<img src="../public/assets/two.png" alt="two">
+				<img src="../public/assets/two.png" alt="two" style="float: center;">
 			</td>
 			<td>
-				<img src="../public/assets/three.jpg" alt="three">
+				<img src="../public/assets/three.jpg" alt="three" style="float: right;">
 			</td>
 		</tr>
 	</table>
