--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-	<title>Index</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="" type="image/ico" sizes="16x16" /
-  <title>Index</title>
-  <style>
-   
-  </style>
-</head>
-<body>
-    <h1>Index WWEEEEE</h1>
-<h4>First Graded Assesment</h4>
-<ul>
-    <li><a href="https://aravilalado.github.io/CS3_2ndQTRPortfolio/public/2Q1GBerylliumVillados.html">My Website</a></li>
-    <li><a href="https://liuz0429.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1GBerylliumCabrera.html">Groupmate 1's Website</a></li>
-    <li><a href="https://liam25465.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1BerylliumSarmiento.html">Groupmate 2's Website</a></li>
-</ul>
-
-</body>
-</html>
-
+	
+	<!DOCTYPE html>
+	<html lang="en">
+	<head>
+	  <meta charset="UTF-8">
+		<title>Index</title>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <link rel="icon" href="" type="image/ico" sizes="16x16" /
+	  <title>Index</title>
+	  <style>
+	   
+	  </style>
+	</head>
+	<body>
+	    <h1>Index WWEEEEE</h1>
+	<h4>First and Second Graded Exercise</h4>
+	<ul>
+	    <li><a href="https://aravilalado.github.io/CS3_2ndQTRPortfolio/public/2Q1GBerylliumVillados.html">My Website</a></li>
+	    <li><a href="https://liuz0429.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1GBerylliumCabrera.html">Groupmate 1's Website</a></li>
+	    <li><a href="https://liam25465.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1BerylliumSarmiento.html">Groupmate 2's Website</a></li>
+	</ul>
+	
+	</body>
+	</html>
+	
 
 
 
