code for index hehe

--- a/index.html
+++ b/index.html
@@ -1,28 +1,73 @@
-	
-	<!DOCTYPE html>
-	<html lang="en">
-	<head>
-	  <meta charset="UTF-8">
-		<title>Index</title>
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="icon" href="" type="image/ico" sizes="16x16" /
-	  <title>Index</title>
-	  <style>
-	   
-	  </style>
-	</head>
-	<body>
-	    <h1>Index WWEEEEE</h1>
-	<h4>First and Second Graded Exercise</h4>
-	<ul>
-	    <li><a href="https://aravilalado.github.io/CS3_2ndQTRPortfolio/public/2Q1GBerylliumVillados.html">My Website</a></li>
-	    <li><a href="https://liuz0429.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1GBerylliumCabrera.html">Groupmate 1's Website</a></li>
-	    <li><a href="https://liam25465.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1BerylliumSarmiento.html">Groupmate 2's Website</a></li>
-	</ul>
-	
-	</body>
-	</html>
-	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Index</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="" type="image/ico" sizes="16x16">
+  <style>
+    /* Soft Trinket Core Styling */
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #fff8f0;
+      color: #4b3f3f;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem;
+      margin: 0;
+    }
 
+    h1 {
+      font-size: 3rem;
+      color: #c27ba0;
+      margin-bottom: 0.5rem;
+    }
 
+    h4 {
+      font-size: 1.3rem;
+      color: #7c5e7e;
+      margin-bottom: 1.5rem;
+    }
 
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      margin: 0.8rem 0;
+    }
+
+    a {
+      text-decoration: none;
+      color: #a05f87;
+      font-weight: 500;
+      transition: color 0.3s, transform 0.2s;
+    }
+
+    a:hover {
+      color: #d9a5c1;
+      transform: scale(1.05);
+    }
+
+    /* Optional subtle card effect */
+    ul li a {
+      background-color: #fbe9f0;
+      padding: 0.6rem 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      display: inline-block;
+    }
+  </style>
+</head>
+<body>
+  <h1>Index WWEEEEE</h1>
+  <h4>First and Second Graded Exercise</h4>
+  <ul>
+    <li><a href="https://aravilalado.github.io/CS3_2ndQTRPortfolio/public/2Q1GBerylliumVillados.html" target="_blank">My Website</a></li>
+    <li><a href="https://liuz0429.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1GBerylliumCabrera.html" target="_blank">Groupmate 1's Website</a></li>
+    <li><a href="https://liam25465.github.io/CS3_2NDQTRPORTFOLIO/public/2Q1BerylliumSarmiento.html" target="_blank">Groupmate 2's Website</a></li>
+  </ul>
+</body>
+</html>
