--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -7,6 +7,16 @@
 	<link rel="icon" href="https://cdn.imgchest.com/files/e76eace881c8.png" type="image/ico" sizes="16x16">
 	<link rel="stylesheet" href="2ndgraded.css">
 	<style>
+	header {
+      height: 100vh;
+      background: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.9)),
+                  url('https://m.media-amazon.com/images/S/pv-target-images/cd6204c81c4547dec4904bc2575d3cdd77abaa462857336faf44abc5eba89ef5.png') center/cover no-repeat;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 2rem;
+    }
 
     header h1 {
       font-size: 3rem;
