--- a/public/2Q1GBerylliumVillados.html
+++ b/public/2Q1GBerylliumVillados.html
@@ -17,7 +17,14 @@
       text-align: center;
       padding: 2rem;
     }
-
+	
+ 	.subheader {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      color: #00ccff;
+    }
+		
     header h1 {
       font-size: 3rem;
       color: #00ccff;
