--- a/index.html
+++ b/index.html
@@ -71,3 +71,87 @@
   </ul>
 </body>
 </html>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Table of Contents</title>
+  <style>
+    :root {
+      --bg: #fafafa;
+      --card: #ffffff;
+      --accent: #4a7bcf;
+      --text: #333;
+    }
+    body {
+      margin: 0;
+      font-family: "Inter", sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .card {
+      background: var(--card);
+      padding: 2rem 3rem;
+      border-radius: 20px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+      width: 350px;
+      text-align: center;
+      animation: fadeIn 0.6s ease;
+    }
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      letter-spacing: 1px;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    li {
+      margin: 0.6rem 0;
+    }
+    a {
+      text-decoration: none;
+      color: var(--accent);
+      font-weight: 600;
+      transition: 0.2s ease;
+    }
+    a:hover {
+      letter-spacing: 1px;
+      color: #2a5bad;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>Index</h1>
+    <ul id="toc"></ul>
+  </div>
+
+  <script>
+    const sections = [
+      { title: "First and Second Graded Exercise", link: "https://aravilalado.github.io/CS3_2ndQTRPortfolio/public/2Q1GBerylliumVillados.html" },
+    ];
+
+    const toc = document.getElementById("toc");
+    sections.forEach(sec => {
+      const li = document.createElement("li");
+      li.innerHTML = `<a href="${sec.link}">${sec.title}</a>`;
+      toc.appendChild(li);
+    });
+  </script>
+</body>
+</html>
