--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tindex Be-29!</title>
+  <title>be-29</title>
   <style>
     :root {
       --bg: #fafafa;
@@ -61,13 +61,14 @@
 </head>
 <body>
   <div class="card">
-    <h1>Index</h1>
+    <h1>index</h1>
     <ul id="toc"></ul>
   </div>
 
   <script>
     const sections = [
       { title: "First and Second Graded Exercise", link: "https://aravilalado.github.io/CS3_2ndQTRPortfolio/public/2Q1GBerylliumVillados.html" },
+      { title: "bleh", link: "rawr" }
     ];
 
     const toc = document.getElementById("toc");
@@ -79,3 +80,4 @@
   </script>
 </body>
 </html>
+
