--- a/public/third quarter/Q3_2GBeVillados.html
+++ b/public/third quarter/Q3_2GBeVillados.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, World!</title>
+    <title>heh</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body style="font-family:Arial, Helvetica, sans-serif;">
