--- a/public/third quarter/Q3_2GBeVillados.html
+++ b/public/third quarter/Q3_2GBeVillados.html
@@ -52,7 +52,7 @@
             <option value="">INVICTUS</option> 
             <option value="">MUN</option> 
             <option value="">PHS</option> 
-            <option value="">ASTROSOC</option> 
+            <option value="">ASTROSOC</option> </select>
     <br />
         <label for="why">Why do you want to join?</label>
         <textarea name="why" id="why" required></textarea>
